# base_seq_opt_multi_dynamic_env_SIM

./: .gitignore  README.md  find_opt_pose_multi.py  problem_formulation_collision_multi.py  tag_poses_SIM.json  tmp_check_map.py
src/base_optimization/: CMakeLists.txt  README.md  package.xml  setup.py
src/base_optimization/config/: README_segmented_projected_map_mqtt.md  settings.yaml
src/base_optimization/msg/: multi_target_pose.msg
src/base_optimization/src/: apriltag_reader.launch
src/base_optimization/src/base_optimization/: base_pose_checker.py  des_EE_pose_publisher_multi.py  des_EE_pose_publisher_sim_multi.py  filter_octomap.cpp  find_opt_pose_multi.py  gripper_poses.py  images_giver.py  map_origin_tracker.py  move_to_next_pose.py  move_to_next_pose_OLD.py  move_to_next_pose_sim.py  octo2cloud_converter.cpp  octomap_frustum_viewer.py  prepare_octomap_sim.cpp  problem_formulation_collision_multi.py  prova_movimento_braccio.py  scene_obeserver.py  segment_scene.py  tag_tf_recorder.py  tag_transforms.json  tmp_camera_loc.py  tmp_check_map.py  tmp_pick.py
src/base_optimization/srv/: images_giver.srv
src/dynamic_obstacle_monitor/: CMakeLists.txt  README.md  package.xml  setup.py
src/dynamic_obstacle_monitor/src/dynamic_obstacle_monitor/: monitor.py  octomap_frustum_viewer.py
src/ee_target_utils/: CMakeLists.txt  README.md  package.xml
src/ee_target_utils/config/: tags.yaml
src/ee_target_utils/launch/: apriltag_reader.launch
src/human_control/: CMakeLists.txt  package.xml
src/human_control/launch/: combined_control.launch  robot_control.launch  wasd_control.launch
src/human_control/meshes/: decimate.mlx  decimate_mesh.py  locobot_intero_sleep_position_reduced.stl
src/human_control/scripts/: fpv_viewer.py  map_overhead_info.txt  map_viewer.py  robot_controller.py  rviz_markers.py  wasd_controller.py
src/human_control/src/: actor_control_plugin.cpp  human_static_control_plugin.cpp  robot_control_plugin.cpp
src/image_bridge/: CMakeLists.txt  package.xml  setup.py
src/image_bridge/docs/: client_usage.md
src/image_bridge/launch/: image_bridge.launch
src/image_bridge/scripts/: image_bridge_node.py
src/interbotix_ros_xslocobots/interbotix_xslocobot_control/config/: modes_all.yaml
src/interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/launch/: xslocobot_description.launch
src/interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/rviz/: xslocobot_description.rviz
src/interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/urdf/: camera_tower.urdf.xacro  hand_camera.urdf.xacro  locobot.urdf.xacro  pan_and_tilt.urdf.xacro  plate.urdf.xacro
src/interbotix_ros_xslocobots/interbotix_xslocobot_gazebo/launch/: xslocobot_gazebo.launch
src/interbotix_ros_xslocobots/interbotix_xslocobot_gazebo/worlds/: animated.world  office_corridor.world  office_corridor_old.world  office_small.world  office_small_custom.world  test_explore.world  v_lab_world.world  v_lab_world_obst.world  xslocobot_gazebo copy.world  xslocobot_gazebo_custom (copy).world  xslocobot_gazebo_orig.world
src/interbotix_ros_xslocobots/interbotix_xslocobot_moveit/: .setup_assistant
src/interbotix_ros_xslocobots/interbotix_xslocobot_moveit/config/: sensors_3d.yaml
src/interbotix_ros_xslocobots/interbotix_xslocobot_moveit/launch/: move_group.launch  sensor_manager.launch.xml  xslocobot_moveit.launch  xslocobot_moveit_sim.launch
src/interbotix_ros_xslocobots/interbotix_xslocobot_nav/config/: common_costmap_params.yaml  global_costmap_depth_params.yaml  global_planner_params.yaml  local_costmap_all_params.yaml  local_costmap_depth_params.yaml  (+2 more)
src/lighthq_grounded_sam_ros/: CMakeLists.txt  package.xml  setup.py
src/lighthq_grounded_sam_ros/src/: grounded_light_hqsam.py  segment_live_node.py  segment_mqtt_bridge_node.py  segmentation_model.py  segmentation_node.py
src/reach_space_modeling/: CMakeLists.txt  package.xml  setup.py
src/reach_space_modeling/srv/: ell_params.srv
(+150 files in other folders)
