<?xml version="1.0"?>
<package format="2">
  <name>human_control</name>
  <version>1.0.0</version>
  <description>Human actor control system for Gazebo 11 with WASD keyboard control, FPV camera, and collision avoidance.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- C++ plugin dependencies -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Python script dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
  </export>
</package>
