<?xml version="1.0"?>
<package format="2">
  <name>image_bridge</name>
  <version>0.0.0</version>
  <description>Synchronizes depth and color images and publishes them over MQTT using pickle serialization.</description>

  <maintainer email="rosario@todo.todo">rosario</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
</package>
